# Constrained-Subgroup-Discovery

./: .gitignore  LICENSE  README.md  data_handling.py  prepare_competitor_runtime_datasets.py  prepare_datasets.py  prepare_demo_datasets.py  requirements-with-competitors.txt  requirements.txt  run_competitor_runtime_evaluation.py  run_competitor_runtime_experiments.py  run_evaluation.py  run_evaluation_arxiv.py  run_evaluation_dissertation.py  run_evaluation_short.py  run_experiments.py  runtime_competitors.py  sd.py  sd4py_methods.py
competitor_runtime_experiments/: requirements.txt  run_competitor_runtime_evaluation.py  run_competitor_runtime_evaluation_arxiv.py  run_competitor_runtime_evaluation_sigmod.py  runtime_competitors.py
csd_package/: README.md  pyproject.toml
csd_package/csd/: __init__.py  csd.py  methods.py  metrics.py
main_experiments/: requirements.txt  run_evaluation_arxiv.py  run_evaluation_sigmod.py  run_experiments.py
